--- a/src/app/components/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/components/pokemon-list-item/pokemon-list-item.component.html
@@ -1,7 +1,7 @@
-<li *ngIf="pokemon">
+<li *ngIf="pokemon" class="mb-4 shadow">
 
     <section class="p-4">
-        <img [src]="pokemon.image" [alt]="pokemon.name" class="block w-72">
+        <img [src]="pokemon.image" [alt]="pokemon.name" class="block w-60">
     </section>
     <section class="p-4">
         <span class="text-2xl">{{pokemon.name}}</span>
