--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,15 @@
-<nav class="bg-yellow-500">
-    <span class="font-bold">Pokémon Trainer</span>
-    <ul>
-        <li>
-            <a routerLink="/pokemons">Pokémon Catalogue</a>
-        </li>
-        <li>
-            <a routerLink="/trainer">Trainer</a>
-        </li>
-    </ul>
+<nav
+  class="bg-yellow-500 flex justify-between items-center p-4 sticky top-0 w-full">
+  <span class="font-bold">Pokémon Trainer</span>
+
+  <ng-container *ngIf="user !== undefined">    <!--If the user is not undefined, showcase the elements in the ng-container... -->
+  <ul class="flex">
+    <li class="px-4">
+      <a routerLink="/pokemons">Pokémon Catalogue</a>
+    </li>
+    <li class="px-4">
+      <a routerLink="/trainer">Trainer</a>
+    </li>
+  </ul>
+</ng-container>
 </nav>
